@@ -1,3 +1,7 @@
+2005-07-12  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-ppc.c (ppc_elf_set_sdata_syms): Correct __sbss_start value.
+
 2005-07-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elflink.c (_bfd_elf_symbol_refs_local_p): Revert the last
